--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    android:id="@+id/google_pixe"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:clipToOutline="true"
+    android:background="@drawable/google_pixel">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/ellipse_1"
+        android:layout_width="470.49dp"
+        android:layout_height="606.21dp"
+        android:background="@drawable/ellipse_1"
+        android:layout_marginTop="-120dp"
+        android:layout_marginLeft="-90dp"
+        android:rotation="160"
+        />
+
+    <TextView
+        android:id="@+id/wego"
+        android:layout_width="197dp"
+        android:layout_height="89dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="184dp"
+        android:fontFamily="@font/righteous"
+        android:gravity="top"
+        android:text="@string/wego"
+        android:textAppearance="@style/wego"
+        />
+
+    <RelativeLayout
+        android:id="@+id/login"
+        android:layout_below="@+id/wego"
+        android:layout_width="283dp"
+        android:layout_height="226dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:background="#00000000">
+
+        <EditText
+            android:id="@+id/username"
+            android:inputType="text"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/username"
+            android:paddingRight="8dp"
+            android:drawableRight="@drawable/username_icon"
+            />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/username"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/password"
+            android:drawableRight="@drawable/password_icon"
+            android:inputType="textPassword"
+            android:paddingRight="8dp" />
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/password"
+            android:layout_marginTop="27dp"
+            android:backgroundTint="@color/login_button"
+            android:text="LOGIN"
+            />
+
+    </RelativeLayout>
+
+</RelativeLayout>
