--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/login_screen"
+    android:id="@+id/register_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color">
@@ -28,81 +28,106 @@
         android:text="@string/wego"
         android:textAppearance="@style/wego"
         />
-
     <RelativeLayout
-        android:id="@+id/login_group"
+        android:id="@+id/register_group"
         android:layout_below="@+id/wego"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="2dp"
         android:background="#00000000">
-
+        
         <EditText
             android:hint="Username"
-            android:id="@+id/login_username"
             android:inputType="text"
+            android:id="@+id/register_username"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/username"
             android:paddingRight="16dp"
             android:paddingLeft="16dp"
+            android:drawableRight="@drawable/username_icon"/>
+
+        <EditText
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:id="@+id/register_email"
+            android:layout_below="@+id/register_username"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/username"
             android:drawableRight="@drawable/username_icon"
-            />
+            android:paddingRight="16dp"
+            android:paddingLeft="16dp"
+            android:layout_marginTop="20dp"/>
 
         <EditText
             android:hint="Password"
-            android:id="@+id/login_password"
+            android:inputType="textPassword"
+            android:id="@+id/register_password"
+            android:layout_below="@+id/register_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_below="@+id/login_username"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/password"
+            android:background="@drawable/username"
             android:drawableRight="@drawable/password_icon"
-            android:inputType="textPassword"
             android:paddingRight="16dp"
             android:paddingLeft="16dp"
-            />
+            android:layout_marginTop="20dp"/>
 
-        <Button
-            android:id="@+id/login_button"
+        <EditText
+            android:hint="Confirm password"
+            android:inputType="textPassword"
+            android:id="@+id/register_confirm_password"
+            android:layout_below="@+id/register_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_below="@+id/login_password"
+            android:background="@drawable/username"
+            android:drawableRight="@drawable/password_icon"
+            android:paddingRight="16dp"
+            android:paddingLeft="16dp"
+            android:layout_marginTop="20dp"/>
+
+        <Button
+            android:id="@+id/register_button"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/register_confirm_password"
             android:layout_marginTop="27dp"
             android:backgroundTint="@color/login_button"
             android:text="LOGIN"
             />
 
+        <Button
+            android:id="@+id/to_login_button"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/register_button"
+            android:layout_marginTop="4dp"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/login_button"
+            android:text="BACK TO LOGIN"
+            />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/login_button"
+            android:layout_below="@+id/to_login_button"
             android:layout_centerHorizontal="true">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account? "/>
+                android:text="By registering, you agreed our "/>
 
             <TextView
-                android:id="@+id/to_register_button"
+                android:id="@+id/terms_of_service_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Create one."
+                android:text="Term of Service"
                 android:textColor="@color/purple_200"/>
 
         </LinearLayout>
 
     </RelativeLayout>
-
-    <TextView
-        android:id="@+id/forgot_password_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot your password?"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="28dp"/>
 
 </RelativeLayout>
