--- a/app/src/main/res/layout/review_post.xml
+++ b/app/src/main/res/layout/review_post.xml
@@ -32,7 +32,7 @@
                 android:layout_height="match_parent"></ImageView>
 
             <TextView
-                android:id="@+id/title_textview"
+                android:id="@+id/title_text"
                 android:layout_width="match_parent"
                 android:layout_height="88dp"
                 android:layout_alignParentStart="true"
