--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="login_button">#07BEB8</color>
     <color name="main_color">#80FFDB</color>
+    <color name="teal">#C6FFF9</color>
 </resources>
