--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -44,7 +44,6 @@
         android:textColor="#07BEB8"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteY="62dp"
         android:layout_below="@+id/top_group"
         android:layout_centerHorizontal="true"/>
 
@@ -81,7 +80,7 @@
                         android:layout_height="60dp"
                         android:layout_alignParentBottom="true"
                         android:background="@drawable/item_style_textview"
-                        android:gravity="center_horizontal"
+                        android:gravity="center"
                         android:text="Địa điểm nổi tiếng"
                         android:textAlignment="center"
                         android:textColor="@color/white"
@@ -115,7 +114,7 @@
                         android:layout_height="60dp"
                         android:layout_alignParentBottom="true"
                         android:background="@drawable/item_style_textview"
-                        android:gravity="center_horizontal"
+                        android:gravity="center"
                         android:text="Địa điểm theo vùng"
                         android:textAlignment="center"
                         android:textColor="@color/white"
@@ -149,7 +148,7 @@
                         android:layout_height="60dp"
                         android:layout_alignParentBottom="true"
                         android:background="@drawable/item_style_textview"
-                        android:gravity="center_horizontal"
+                        android:gravity="center"
                         android:text="Mẹo khi du lịch "
                         android:textAlignment="center"
                         android:textColor="@color/white"
@@ -183,7 +182,7 @@
                         android:layout_height="60dp"
                         android:layout_alignParentBottom="true"
                         android:background="@drawable/item_style_textview"
-                        android:gravity="center_horizontal"
+                        android:gravity="center"
                         android:text="Ẩm thực"
                         android:textAlignment="center"
                         android:textColor="@color/white"
