--- a/app/src/main/res/layout/activity_review_post_show.xml
+++ b/app/src/main/res/layout/activity_review_post_show.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ReviewPostShow">
 
+<!--    TODO: add more imageviews-->
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/update_reviewpost"
-                android:layout_width="wrap_content"
+                android:id="@+id/review_post_update_date_textview"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="update Text"></TextView>
+                android:text="update_date"></TextView>
             <ImageView
-                android:id="@+id/image_reviewpost"
-                android:layout_width="wrap_content"
+                android:id="@+id/review_post_imageview"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 ></ImageView>
             <TextView
-                android:id="@+id/title_reviewpost"
+                android:id="@+id/review_post_title_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Title"
@@ -37,10 +37,10 @@
                 android:textSize="30dp"
                 android:gravity="center_horizontal"></TextView>
             <TextView
-                android:id="@+id/content_reviewpost"
+                android:id="@+id/review_post_content_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Content"></TextView>
+                android:text="content"></TextView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="71dp"
@@ -49,7 +49,7 @@
 
                 <ImageButton
                     android:id="@+id/like_btn_reviewpost"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="@android:color/transparent"
@@ -57,7 +57,7 @@
 
                 <ImageButton
                     android:id="@+id/cmt_btn_reviewpost"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="@android:color/transparent"
@@ -65,7 +65,7 @@
 
                 <ImageButton
                     android:id="@+id/map_btn_reviewpost"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="@android:color/transparent"
@@ -73,4 +73,4 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
