--- a/app/src/main/res/layout/activity_review_posts.xml
+++ b/app/src/main/res/layout/activity_review_posts.xml
@@ -39,7 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/top_group"
-        android:id="@+id/review_post_recyclerview">
+        android:id="@+id/review_post_recyclerview"
+        android:paddingBottom="60dp"
+        android:clipToPadding="false" >
 
     </androidx.recyclerview.widget.RecyclerView>
 
