--- a/app/src/main/res/layout/review_post.xml
+++ b/app/src/main/res/layout/review_post.xml
@@ -4,7 +4,10 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/transparent"
-    app:cardCornerRadius="40dp">
+    app:cardCornerRadius="40dp"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginBottom="15dp"
+    android:id="@+id/review_post">
 
     <RelativeLayout
         android:id="@+id/item_review_post"
