--- a/app/src/main/res/layout/activity_review_post_show.xml
+++ b/app/src/main/res/layout/activity_review_post_show.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ReviewPostShow">
 
-<!--    TODO: add more imageviews-->
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,18 +15,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/review_post_update_date_textview"
+                android:id="@+id/review_post_show_update_date_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="update_date"></TextView>
-            <ImageView
-                android:id="@+id/review_post_imageview"
+            <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                ></ImageView>
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:id="@+id/review_post_show_images">
+                </LinearLayout>
+            </HorizontalScrollView>
             <TextView
-                android:id="@+id/review_post_title_textview"
+                android:id="@+id/review_post_show_title_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Title"
@@ -37,7 +40,7 @@
                 android:textSize="30dp"
                 android:gravity="center_horizontal"></TextView>
             <TextView
-                android:id="@+id/review_post_content_textview"
+                android:id="@+id/review_post_show_content_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="content"></TextView>
