--- a/app/src/main/res/layout/activity_review_post_show.xml
+++ b/app/src/main/res/layout/activity_review_post_show.xml
@@ -19,17 +19,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="update_date"></TextView>
-            <HorizontalScrollView
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:id="@+id/review_post_show_imageview"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:id="@+id/review_post_show_images">
-                </LinearLayout>
-            </HorizontalScrollView>
             <TextView
                 android:id="@+id/review_post_show_title_textview"
                 android:layout_width="match_parent"
@@ -43,7 +37,10 @@
                 android:id="@+id/review_post_show_content_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="content"></TextView>
+                android:text="content"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                android:layout_marginHorizontal="5dp"></TextView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="71dp"
@@ -65,7 +62,6 @@
                     android:layout_weight="1"
                     android:backgroundTint="@android:color/transparent"
                     android:src="@drawable/cmt"></ImageButton>
-
                 <ImageButton
                     android:id="@+id/map_btn_reviewpost"
                     android:layout_width="match_parent"
@@ -73,6 +69,46 @@
                     android:layout_weight="1"
                     android:backgroundTint="@android:color/transparent"
                     android:src="@drawable/map_in_reviewpost"></ImageButton>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/review_post_comment_section"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="5dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/write_comment_edittext"
+                        android:inputType="textMultiLine"
+                        android:layout_weight="8">
+                    </EditText>
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/post_comment"
+                        android:backgroundTint="#07BEB8"
+                        android:text="POST"
+                        android:layout_weight="1"></Button>
+                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Bình luận:"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    android:layout_marginHorizontal="5dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/posted_comments"
+                    android:orientation="vertical"
+                    android:layout_marginHorizontal="5dp"
+                    android:background="@color/teal"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
