--- a/app/src/main/res/layout/activity_category_item_list.xml
+++ b/app/src/main/res/layout/activity_category_item_list.xml
@@ -55,7 +55,7 @@
 
 
         <ImageButton
-            android:id="@+id/home_btn"
+            android:id="@+id/home_btn_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
@@ -64,7 +64,7 @@
             android:background="@drawable/circle" />
 
         <ImageButton
-            android:id="@+id/profile_btn"
+            android:id="@+id/profile_btn_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
