--- a/app/src/main/res/layout/activity_review_post_show.xml
+++ b/app/src/main/res/layout/activity_review_post_show.xml
@@ -13,7 +13,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="60dp">
             <TextView
                 android:id="@+id/review_post_show_update_date_textview"
                 android:layout_width="match_parent"
