--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -89,7 +89,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:id="@+id/favorite_articles">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
